@@ -1,8 +1,8 @@
 Package: googleVis
 Type: Package
 Title: Interface between R and the Google Chart Tools
-Version: 0.4.4
-Date: 2013-08-23
+Version: 0.4.5
+Date: 2013-08-29
 Authors@R: c(person("Markus", "Gesmann", role = c("aut", "cre"),
                      email = "markus.gesmann@googlemail.com"),
             person("Diego", "de Castillo", role = "aut",
@@ -12,8 +12,8 @@ Authors@R: c(person("Markus", "Gesmann", role = c("aut", "cre"),
 Author: Markus Gesmann, Diego de Castillo
 Maintainer: Markus Gesmann <markus.gesmann@googlemail.com>
 Description: 
-   The googleVis package provides an interface between R and Google's
-   Chart Tools. It allows users to create web pages with interactive
+   The googleVis package provides an interface between R and the Google
+   Chart Tools API. It allows users to create web pages with interactive
    charts based on R data frames, using the Google Chart Tools and to
    display them either via the local R HTTP help server or within
    their own sites, without uploading the data to Google. A modern
